--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 shellexpand = "3.1.1"
 thiserror = "2.0.17"
 toml = "0.9.8"
+walkdir = "2.5.0"
 
 [dev-dependencies]
 rstest = "0.26.1"
