--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -8,6 +8,7 @@ name = "markadd"
 path = "src/main.rs"
 
 [dependencies]
+clap = { version = "4.5.51", features = ["derive"] }
 markadd-core = { path = "../core" }
 
 [dev-dependencies]
