--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/lib.rs"
 
 [dependencies]
 chrono = { version = "0.4.42", features = ["clock"] }
+comrak = "0.35"
 dirs = "6.0.0"
 regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
@@ -18,5 +19,6 @@ toml = "0.9.8"
 walkdir = "2.5.0"
 
 [dev-dependencies]
+insta = "1.43"
 rstest = "0.26.1"
 tempfile = "3.23.0"
