--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "markadd"
 version = "0.0.1"
-edition = "2024"
+edition = "2021"
 
 [[bin]]
 name = "markadd"
@@ -10,7 +10,10 @@ path = "src/main.rs"
 [dependencies]
 chrono = { version = "0.4.42", features = ["clock"] }
 clap = { version = "4.5.51", features = ["derive"] }
+color-eyre = "0.6"
+crossterm = "0.28"
 markadd-core = { path = "../core" }
+ratatui = "0.29"
 regex = "1.12.2"
 
 [dev-dependencies]
