--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -17,6 +17,8 @@ dialoguer = "0.11"
 mdvault-core = { path = "../core" }
 ratatui = "0.29"
 regex = "1.12.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 assert_cmd = "2.1.1"
