--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/lib.rs"
 chrono = { version = "0.4.42", features = ["clock", "serde"] }
 comrak = "0.35"
 dirs = "6.0.0"
+mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
 regex = "1.12.2"
 rusqlite = { version = "0.32", features = ["bundled"] }
 serde = { version = "1.0.228", features = ["derive"] }
