--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -25,6 +25,7 @@ mdvault-core = { version = "0.1.2", path = "../core" }
 ratatui = "0.29"
 regex = "1.12.2"
 serde = { version = "1.0", features = ["derive"] }
+tabled = "0.17"
 serde_json = "1.0"
 serde_yaml = "0.9"
 walkdir = "2.5"
