--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,13 @@ dist
 # IDEs
 .idea/
 .vscode/
+
+# Coverage
+cobertura.xml
+tarpaulin-report.html
+tarpaulin-report.xml
+tarpaulin-report.json
+lcov.info
+coverage.json
 .DS_Store
 
