--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -31,6 +31,7 @@ serde_yaml = "0.9"
 walkdir = "2.5"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 tracing-appender = "0.2.4"
+tracing = "0.1.44"
 
 [dev-dependencies]
 assert_cmd = "2.1.1"
