feat(scripting): add interactive selector for Lua schemas and hooks
Add two ways to use interactive note selectors:

1. Schema attribute: Fields with `selector = "type"` show a fuzzy picker
   for notes of that type during prompting, instead of text input.

   ```lua
   project = { selector = "project", prompt = "Select project" }
   ```

2. Lua API: `mdv.selector({ type = "project" })` in hooks for dynamic
   selection during note creation.

Features:
- Fuzzy search using dialoguer's FuzzySelect
- Works with any note type (project, task, area, etc.)
- Returns note name (file stem) for schema fields
- Returns full path for Lua API
- Batch mode uses default value or errors if required
- Comprehensive test coverage and documentation

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -20,7 +20,7 @@ clap = { version = "4.5.54", features = ["derive"] }
 clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
 color-eyre = "0.6"
 crossterm = "0.28"
-dialoguer = "0.11"
+dialoguer = { version = "0.11", features = ["fuzzy-select"] }
 mdvault-core = { version = "0.2.1", path = "../core" }
 ratatui = "0.29"
 regex = "1.12.2"
